syntax = "proto3";
package tank_common;

message Vector3 {
    float x = 1;
    float y = 2;
    float z = 3;
}

message Quaternion {
    float x = 1;
    float y = 2;
    float z = 3;
    float w = 4;
}

message Transform {
    Vector3 position = 1;
    Quaternion rotation = 2;
}