syntax = "proto3";
package tank_game;

message Ping {
    int64 ts = 1;
}

message Pong {
    int64 ts = 1;
}